--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "express-graphql": "^0.6.6",
+    "graphql": "^0.10.3",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
   },
