--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.14.1",
     "express-graphql": "^0.6.6",
     "graphql": "^0.10.3",
+    "mongoose": "^4.11.1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
   },
