--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
 	"extends": ["eslint:recommended", "google"],
 
 	"parserOptions": {
-		"ecmaVersion": 6
+		"ecmaVersion": 6,
+		"sourceType": "module"
 	},
 
 	"rules": {
@@ -19,7 +20,8 @@
 
 	"env": {
 		"es6": true,
-		"node": true
+		"node": true,
+		"browser": true
 	},
 
 	"plugins": [
