--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "start": "node ./bin/www",
     "debug": "SET DEBUG=enchiridion2:* & npm start",
-    "lint": "node ./node_modules/eslint/bin/eslint.js ./**.js",
-    "nodemon": "node ./node_modules/nodemon/bin/nodemon.js",
-    "build": "node ./node_modules/webpack/bin/webpack.js"
+    "lint": "eslint ./**.js",
+    "nodemon": "nodemon --exec 'node -r dotenv/config ./bin/www'",
+    "build": "webpack",
+    "test": "tap test/*.js --coverage",
+    "uploadCoverage": "tap --coverage-report=lcov && cat ./coverage/lcov.info | ./node_modules/codacy-coverage/bin/codacy-coverage.js"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
+    "codacy-coverage": "^2.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
+    "dotenv": "^4.0.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
     "mongoose": "^4.11.1",
@@ -24,6 +28,7 @@
     "eslint-config-google": "^0.8.0",
     "eslint-plugin-html": "^3.0.0",
     "nodemon": "^1.11.0",
+    "tap": "^10.7.1",
     "webpack": "^3.2.0"
   }
 }
